@@ -5,6 +5,8 @@
 === 0.5.3 ===
 - Added LSP_DSP_UNITS_SOUND_SPEED_M_S constant that defines sound speed.
 - Added reset() method to the dspu::Equalizer class to reset internal memory.
+- Added different information methods to the dspu::Equalizer which allow to obtain
+  the current configuration state of the equalizer.
 
 === 0.5.2 ===
 * Updated tracing information.
